[FIX] web: Horizontal scroll issue with direction rtl

--- a/addons/web/static/src/scss/webclient_layout.scss
+++ b/addons/web/static/src/scss/webclient_layout.scss
@@ -159,6 +159,7 @@
                 > .o_view_controller {
                     @include o-position-absolute(0, 0, 0, 0);  // Get the 100% height of its flex parent
                     height: 100%;
+                    direction: ltr;
                 }
             }
         }
